Modification pour le build.gradle.kts